[metadata]
description_file = README.md
long_description_content_type=text/markdown

[build_ext]
inplace=0

[black]
exclude=perspective/tests/

[flake8]
ignore=E203, W503
max-line-length=200
exclude=perspective/tests/

[check-manifest]
# ignore files legitimately missing in VCS
ignore = 
    dist/**
	perspective/table/*.so
	perspective/table/*.pyd
	perspective/table/*.dll
	perspective/labextension/**
	perspective/nbextension/perspective-nbextension.js