[metadata]
description_file = README.md
long_description_content_type=text/markdown

[build_ext]
inplace=0

[black]
exclude=perspective/tests/

[flake8]
ignore=E203, W503
max-line-length=200
exclude=perspective/tests/
per-file-ignores =
    __init__.py: F401, F403
    libpsp.py: F401, F403

[tool:pytest]
asyncio_mode=strict
testpaths =
    perspective/tests