#  ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
#  ┃ ██████ ██████ ██████       █      █      █      █      █ █▄  ▀███ █       ┃
#  ┃ ▄▄▄▄▄█ █▄▄▄▄▄ ▄▄▄▄▄█  ▀▀▀▀▀█▀▀▀▀▀ █ ▀▀▀▀▀█ ████████▌▐███ ███▄  ▀█ █ ▀▀▀▀▀ ┃
#  ┃ █▀▀▀▀▀ █▀▀▀▀▀ █▀██▀▀ ▄▄▄▄▄ █ ▄▄▄▄▄█ ▄▄▄▄▄█ ████████▌▐███ █████▄   █ ▄▄▄▄▄ ┃
#  ┃ █      ██████ █  ▀█▄       █ ██████      █      ███▌▐███ ███████▄ █       ┃
#  ┣━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┫
#  ┃ Copyright (c) 2017, the Perspective Authors.                              ┃
#  ┃ ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ ┃
#  ┃ This file is part of the Perspective library, distributed under the terms ┃
#  ┃ of the [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0). ┃
#  ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛

[package]
name = "perspective-python"
version = "3.0.0-rc.6"
edition = "2021"
description = "A data visualization and analytics component, especially well-suited for large and/or streaming datasets."
repository = "https://github.com/finos/perspective"
license = "Apache-2.0"
homepage = "https://perspective.finos.org"
authors = ["Andrew Stein <steinlink@gmail.com>"]
keywords = []
build = "build/main.rs"
include = [
    "bench/**/*.py",
    "build/**/*",
    "./Cargo.toml",
    "./package.json",
    "perspective/**/*.py",
    "./pyproject.toml",
    "src/**/*.rs",
    "docs/**/*",
    "cpp/**/*",
    "cmake/**/*",
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs/index.html"]

[features]
default = []
sdist = []
external-cpp = ["perspective-client/external-proto"]

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cxx-build = "1.0.115"
cmake = "0.1.50"
num_cpus = "^1.16.0"
pyo3-build-config = "0.20.2"
python-config-rs = "0.1.2"

[dependencies]
async-lock = "2.5.0"
perspective-client = { version = "3.0.0-rc.6", path = "../perspective-client" }
# perspective-server = { version = "3.0.0-rc.6", path = "../perspective-server" }
pollster = "0.3.0"
extend = "1.1.2"
futures = "0.3.28"
pyo3 = { version = "0.21.2", features = [
    "extension-module",
    "serde",
    "abi3-py39",
] }
pythonize = "0.21.1"
tracing = { version = ">=0.1.36" }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
