#  ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
#  ┃ ██████ ██████ ██████       █      █      █      █      █ █▄  ▀███ █       ┃
#  ┃ ▄▄▄▄▄█ █▄▄▄▄▄ ▄▄▄▄▄█  ▀▀▀▀▀█▀▀▀▀▀ █ ▀▀▀▀▀█ ████████▌▐███ ███▄  ▀█ █ ▀▀▀▀▀ ┃
#  ┃ █▀▀▀▀▀ █▀▀▀▀▀ █▀██▀▀ ▄▄▄▄▄ █ ▄▄▄▄▄█ ▄▄▄▄▄█ ████████▌▐███ █████▄   █ ▄▄▄▄▄ ┃
#  ┃ █      ██████ █  ▀█▄       █ ██████      █      ███▌▐███ ███████▄ █       ┃
#  ┣━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┫
#  ┃ Copyright (c) 2017, the Perspective Authors.                              ┃
#  ┃ ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ ┃
#  ┃ This file is part of the Perspective library, distributed under the terms ┃
#  ┃ of the [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0). ┃
#  ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛

[package]
name = "perspective-python"
version = "3.1.2"
edition = "2021"
description = "A data visualization and analytics component, especially well-suited for large and/or streaming datasets."
repository = "https://github.com/finos/perspective"
license = "Apache-2.0"
homepage = "https://perspective.finos.org"
authors = ["Andrew Stein <steinlink@gmail.com>"]
keywords = []
build = "build.rs"
include = [
    "bench/**/*.py",
    "build.rs",
    "./Cargo.toml",
    "README.md",
    "./package.json",
    "perspective/**/*.py",
    "perspective/extension",
    "perspective/templates",
    "perspective/tests/**/*.arrow",
    "./pyproject.toml",
    "src/**/*.rs",
    "docs/**/*",
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs/index.html"]

[features]
default = []
abi3 = ["pyo3/abi3-py39"]
external-cpp = ["perspective-server/external-cpp"]
generate-proto = ["perspective-client/generate-proto"]
protobuf-src = ["perspective-client/protobuf-src"]

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cmake = "0.1.50"
num_cpus = "^1.16.0"
pyo3-build-config = "0.20.2"
python-config-rs = "0.1.2"

[dependencies]
# NOTE: when building from the git repo, these perspective-* dependencies are
# overridden with path dependencies in .cargo/config.toml.  This is done to
# support the sdist, which doesn't include these packages.
perspective-client = { version = "3.1.2" }
perspective-server = { version = "3.1.2" }
async-lock = "2.5.0"
pollster = "0.3.0"
extend = "1.1.2"
futures = "0.3.28"
pyo3 = { version = "0.21.2", features = ["extension-module", "serde"] }
pythonize = "0.21.1"
tracing = { version = ">=0.1.36" }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
