#  ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
#  ┃ ██████ ██████ ██████       █      █      █      █      █ █▄  ▀███ █       ┃
#  ┃ ▄▄▄▄▄█ █▄▄▄▄▄ ▄▄▄▄▄█  ▀▀▀▀▀█▀▀▀▀▀ █ ▀▀▀▀▀█ ████████▌▐███ ███▄  ▀█ █ ▀▀▀▀▀ ┃
#  ┃ █▀▀▀▀▀ █▀▀▀▀▀ █▀██▀▀ ▄▄▄▄▄ █ ▄▄▄▄▄█ ▄▄▄▄▄█ ████████▌▐███ █████▄   █ ▄▄▄▄▄ ┃
#  ┃ █      ██████ █  ▀█▄       █ ██████      █      ███▌▐███ ███████▄ █       ┃
#  ┣━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┫
#  ┃ Copyright (c) 2017, the Perspective Authors.                              ┃
#  ┃ ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ ┃
#  ┃ This file is part of the Perspective library, distributed under the terms ┃
#  ┃ of the [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0). ┃
#  ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛

[package]
name = "perspective-python"
version = "3.6.1"
edition = "2024"
description = "A data visualization and analytics component, especially well-suited for large and/or streaming datasets."
repository = "https://github.com/finos/perspective"
license = "Apache-2.0"
homepage = "https://perspective.finos.org"
authors = ["Andrew Stein <steinlink@gmail.com>"]
keywords = []
build = "build.rs"
include = [
    "bench/**/*.py",
    "build.rs",
    "./Cargo.toml",
    "LICENSE.md",
    "LICENSE_*",
    "README.md",
    "./package.json",
    "perspective/**/*.py",
    "perspective/extension",
    "perspective/templates",
    "perspective/tests/**/*.arrow",
    "./pyproject.toml",
    "src/**/*.rs",
    "docs/**/*",
]

[package.metadata.docs.rs]
features = ["external-docs"]
rustdoc-args = ["--html-in-header", "docs/index.html"]

[features]
default = []
abi3 = ["pyo3/abi3-py39"]
external-cpp = ["perspective-server/external-cpp"]
generate-proto = ["perspective-client/generate-proto"]
protobuf-src = ["perspective-client/protobuf-src"]
external-docs = []

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cmake = "0.1.50"
num_cpus = "^1.16.0"
pyo3-build-config = "0.22.6"
python-config-rs = "0.1.2"

[dependencies]
perspective-client = { version = "3.6.1" }
perspective-server = { version = "3.6.1" }
macro_rules_attribute = "0.2.0"
async-lock = "2.5.0"
pollster = "0.3.0"
extend = "1.1.2"
futures = "0.3.28"
pyo3 = { version = "0.23.4", features = [
    "experimental-async",
    "extension-module",
    "serde",
] }
pythonize = "0.23.0"
tracing = { version = ">=0.1.36" }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[target.'cfg(target_os="emscripten")'.dependencies]
pyo3-async-runtimes = { version = "0.23", features = ["attributes"] }

[target.'cfg(not(target_os="emscripten"))'.dependencies]
pyo3-async-runtimes = { version = "0.23", features = [
    "attributes",
    "tokio-runtime",
] }
tokio = { version = "1.43.0", features = ["full"] }
