#  ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
#  ┃ ██████ ██████ ██████       █      █      █      █      █ █▄  ▀███ █       ┃
#  ┃ ▄▄▄▄▄█ █▄▄▄▄▄ ▄▄▄▄▄█  ▀▀▀▀▀█▀▀▀▀▀ █ ▀▀▀▀▀█ ████████▌▐███ ███▄  ▀█ █ ▀▀▀▀▀ ┃
#  ┃ █▀▀▀▀▀ █▀▀▀▀▀ █▀██▀▀ ▄▄▄▄▄ █ ▄▄▄▄▄█ ▄▄▄▄▄█ ████████▌▐███ █████▄   █ ▄▄▄▄▄ ┃
#  ┃ █      ██████ █  ▀█▄       █ ██████      █      ███▌▐███ ███████▄ █       ┃
#  ┣━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┫
#  ┃ Copyright (c) 2017, the Perspective Authors.                              ┃
#  ┃ ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ ┃
#  ┃ This file is part of the Perspective library, distributed under the terms ┃
#  ┃ of the [Apache License 2.0](https://www.apache.org/licenses/LICENSE-2.0). ┃
#  ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛

[package]
name = "perspective-server"
version = "3.8.0"
authors = ["Andrew Stein <steinlink@gmail.com>"]
edition = "2024"
description = "A data visualization and analytics component, especially well-suited for large and/or streaming datasets."
repository = "https://github.com/finos/perspective"
license = "Apache-2.0"
homepage = "https://perspective.finos.org"
keywords = []
build = "build/main.rs"
include = [
    "src/**/*",
    "build/**/*",
    "include/**/*",
    "cpp/**/*",
    "docs/**/*",
    "cmake/**/*",
    "Cargo.toml",
]

[features]
default = ["python"]
external-cpp = []
wasm-exceptions = []
python = []
disable-cpp = []

[build-dependencies]
cmake = "0.1.50"
num_cpus = "^1.15.0"
shlex = "1.3.0"
protobuf-src = { version = "2.0.1" }

[dependencies]
perspective-client = { version = "3.8.0" }

# Key order is frequently implicitly relied upon in dynamic languages, so for
# convenience we try to provide this (as well as explicit metadata calls).
indexmap = { version = "2.2.6", features = ["serde"] }

# Convenient way to crawl the C++ static archive path
link-cplusplus = "1.0.9"
async-lock = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
tracing = { version = ">=0.1.36" }
thiserror = { version = "1.0.55" }
futures = "0.3"

[dependencies.prost]
version = "0.12.3"
default-features = false
features = ["prost-derive", "std"]

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"
